# rust-grpc-chatroom

./: Cargo.toml  README.md  arm64.dockerfile  armv7.dockerfile  build.rs  docker-compose.yml  mingw.dockerfile  sqlx-data.json
.rmi-work/: .gitignore  conf.zsh
chatroom_ui/: README.md  package.json  quasar.conf.js
chatroom_ui/src/components/: MessageList.vue
chatroom_ui/src/layouts/: MainLayout.vue
chatroom_ui/src/pages/: Index.vue  Main.vue
chatroom_ui/src/proto/: .eslintrc  ChatServiceClientPb.ts  chat_pb.d.ts  chat_pb.js
chatroom_ui/src/router/: index.ts  routes.ts
chatroom_ui/src/store/: index.ts
migrations/: 20220129100248_init.sql
proto/: chat.proto
src/: lib.rs  main.rs  msg_db.rs  prelude.rs
src/rpc/: join.rs  mod.rs  new_msg.rs  say.rs
