[package]
name = "grpc_chatroom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.19"
prost = "0.9.0"
sqlx = { version = "0.5.10", features = ["offline", "postgres", "chrono", "runtime-tokio-native-tls"] }
tokio = { version = "1.16.1", features = ["sync"] }
tokio-stream = { version = "0.1.8", features = ["sync"] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"
